css/styles.css
html {
  -webkit-box-sizing: border-box;
          box-sizing: border-box;
}

*::before, *::after {
  -webkit-box-sizing: inherit;
          box-sizing: inherit;
}

body {
  margin: 0 auto;
  padding: 0;
  width: 1200px;
  color: #333333;
  font-family: "PT Sans", Arial, sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 26px;
  text-transform: uppercase;
  -webkit-box-shadow: 0 5px 15px rgba(0, 1, 1, 0.2);
          box-shadow: 0 5px 15px rgba(0, 1, 1, 0.2);
  background-color: #f2f2f2;
}

.visually-hidden {
  position: absolute;
  clip: rect(0 0 0 0);
  width: 1px;
  height: 1px;
  margin: -1px;
}

a {
  text-decoration: none;
}

.main {
  background-color: white;
}

.main-nav {
  position: relative;
  background-color: #ffffff;
  font-weight: 700;
  padding: 15px 72px;
}

.main-header {
  position: relative;
}

.main-header-logo {
  z-index: 1;
  position: absolute;
  width: 138px;
  height: 70px;
  top: 0;
  left: 50%;
  -webkit-transform: translateX(-50%);
          transform: translateX(-50%);
  margin: 0 auto;
}

.main-caption-container {
  background-color: #81b3d2;
  background-image: url(../img/background-mask.png), url(../img/background.jpg);
  background-repeat: no-repeat, no-repeat;
  background-position: 0 bottom, 0 -57px;
  padding: 75px 0 80px;
}

.main-caption-text {
  display: block;
  margin: 0 auto;
  width: 458px;
}

.body-hotels {
  background-color: #ffffff;
  -webkit-filter: none;
          filter: none;
}

.site-navigation {
  margin: 0;
  padding: 0;
  list-style: none;
  text-align: center;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -ms-flex-wrap: wrap;
      flex-wrap: wrap;
  -webkit-box-sizing: border-box;
          box-sizing: border-box;
}

.site-navigation li {
  width: 210px;
}

.site-navigation li:nth-child(4n+1) {
  margin-right: 30px;
}

.site-navigation li:nth-child(4n+2) {
  margin-right: 155px;
}

.site-navigation li:nth-child(4n+3) {
  margin-right: 30px;
}

.site-navigation li:nth-child(4n) {
  margin-right: 0px;
}

.site-navigation li:nth-child(4n+1), .site-navigation li:nth-child(4n+2) {
  text-align: left;
}

.site-navigation li:nth-child(4n+3), .site-navigation li:nth-child(4n) {
  text-align: right;
}

.site-navigation a {
  color: #333333;
}

.site-navigation a:hover, .site-navigation a:focus {
  color: #81b3d2;
}

.site-navigation a:active {
  color: #000000;
  opacity: 0.3;
}

.current a {
  cursor: default;
  color: #766357;
}

.current a:hover, .current a:focus {
  color: #766357;
}

.advantages {
  background-color: #ffffff;
  padding-top: 62px;
}

.advantages b {
  display: block;
  text-align: center;
  margin: 0 auto 27px;
  width: 50%;
  font-size: 21px;
  font-weight: 700;
}

.advantages-header {
  text-align: center;
  margin: 0 auto 50px;
  width: 50%;
  font-size: 14px;
  font-weight: 400;
  line-height: 26px;
}

.advantages-list {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -ms-flex-wrap: wrap;
      flex-wrap: wrap;
  margin: 0;
  padding: 0;
  list-style: none;
  text-align: center;
}

.advantages-special {
  margin-top: 49px;
  padding: 0 55px 80px;
  max-width: 33.33%;
  -webkit-box-sizing: border-box;
          box-sizing: border-box;
}

.advantages-special::before {
  display: inline-block;
  vertical-align: top;
  content: "";
  width: 90px;
  height: 90px;
  background-repeat: no-repeat;
  background-position: center;
  margin-bottom: 21px;
}

.advantages-special-header {
  margin: 0;
  -webkit-hyphens: auto;
      -ms-hyphens: auto;
          hyphens: auto;
  font-size: 21px;
  font-weight: 700;
  line-height: 21px;
  margin-bottom: 25px;
}

.advantages-special-description {
  margin: 0;
  line-height: 21px;
}

.advantages-item {
  max-width: 33.33%;
  -webkit-box-sizing: border-box;
          box-sizing: border-box;
  background-color: #f2f2f2;
  padding: 45px 60px 60px;
  position: relative;
}

.advantages-item-header {
  margin: 0 90px 25px;
  font-size: 21px;
  font-weight: 700;
  line-height: 21px;
  -webkit-hyphens: auto;
      -ms-hyphens: auto;
          hyphens: auto;
}

.advantages-item-number {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  margin-bottom: 15px;
}

.advantages-item-number::before {
  display: block;
  position: absolute;
  width: 8px;
  height: 1px;
  right: -14px;
  top: 11px;
  content: "";
  border-bottom: 1px solid white;
}

.advantages-item-number::after {
  display: block;
  position: absolute;
  width: 8px;
  height: 1px;
  left: -14px;
  top: 11px;
  content: "";
  border-bottom: 1px solid white;
}

.advantages-item-description {
  padding: 0;
  margin: 0;
  line-height: 21px;
}

.advantages-item:nth-child(6), .advantages-item:nth-child(7), .advantages-item:nth-child(8) {
  padding: 48px 68px 56px;
}

.advantages-item:nth-child(6) .advantages-item-header, .advantages-item:nth-child(7) .advantages-item-header, .advantages-item:nth-child(8) .advantages-item-header {
  margin: 0 70px 22px;
}

.advantages-item:nth-child(6) .advantages-item-number, .advantages-item:nth-child(7) .advantages-item-number, .advantages-item:nth-child(8) .advantages-item-number {
  margin-bottom: 18px;
}

.advantages-item:nth-child(6) .advantages-item-number::before, .advantages-item:nth-child(7) .advantages-item-number::before, .advantages-item:nth-child(8) .advantages-item-number::before {
  display: block;
  position: absolute;
  width: 8px;
  height: 1px;
  right: -14px;
  top: 11px;
  content: "";
  border-bottom: 1px solid black;
}

.advantages-item:nth-child(6) .advantages-item-number::after, .advantages-item:nth-child(7) .advantages-item-number::after, .advantages-item:nth-child(8) .advantages-item-number::after {
  display: block;
  position: absolute;
  width: 8px;
  height: 1px;
  left: -14px;
  top: 11px;
  content: "";
  border-bottom: 1px solid black;
}

.important {
  padding-top: 47px;
  min-width: 100%;
  background-color: #81b3d2;
  color: #ffffff;
}
/* ... */

